<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_view_rota"
    android:layout_width="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/personName"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/personPresent"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"
        android:text="@string/present" >
    </TextView>

    <TextView
        android:id="@+id/personHoliday"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"
        android:text="@string/holidays" >
    </TextView>

    <TextView
        android:id="@+id/personAbsent"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_vertical"
        android:text="@string/absense" >
</TextView>

</LinearLayout>


